syntax = "proto3";

package ring;

message Desc {
	map<string,IngesterDesc> ingesters = 1;
	repeated TokenDesc tokens = 2;
}

message IngesterDesc {
	string hostname = 1;
	int64 timestamp = 2;
	IngesterState state = 3;
	bool protoRing = 5;
}

message TokenDesc {
	uint32 token = 1;
	string ingester = 2;
}

enum IngesterState {
	ACTIVE = 0;
	LEAVING = 1;
}
